fix image height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5662,6 +5662,10 @@ a.animated-button.victoria-four:hover:after {
   justify-content: flex-start;
 }
 
+.category-list .group-lg-wrapper .cate-group .image {
+  align-self: center;
+}
+
 .category-list .group-lg-wrapper .button-control {
   margin-top: 30px;
   text-align: center;
